small fixes to vertical align search radius

--- a/css/style.scss
+++ b/css/style.scss
@@ -532,6 +532,10 @@ a.active-tab-menu {
 	}
 }
 
+.choose-location-box {
+	width: 50%;
+	margin: 0 auto;
+}
 
 .location-select-box {
 	img, span {
@@ -548,14 +552,16 @@ a.active-tab-menu {
 
 .current-location {
 	font-size: 1.5em;
+	color: RGBA(0, 120, 254, 1);
 }
 
 .search-radius-box {
-	margin-top: 10px;
+	margin-top: 15px;
 }
 
 .search-radius {
-	float: left;
+	display: inline-block;
+	vertical-align: middle;
 }
 
 .slider {
